--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@angular-devkit/architect": "^0.1402.2",
     "@angular-devkit/core": "^14.2.2",
     "@angular-devkit/schematics": "^14.2.2",
-    "@angular/animations": "~11.2.14",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
+    "@angular/animations": "^14.2.1",
+    "@angular/common": "^14.2.1",
+    "@angular/compiler": "^14.2.1",
     "@angular/core": "^14.2.1",
-    "@angular/forms": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
+    "@angular/forms": "^14.2.1",
+    "@angular/platform-browser": "^14.2.1",
+    "@angular/platform-browser-dynamic": "^14.2.1",
+    "@angular/router": "^14.2.1",
     "@schematics/angular": "^14.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.2",
     "@angular/cli": "^14.2.2",
-    "@angular/compiler-cli": "~11.2.14",
+    "@angular/compiler-cli": "^14.2.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -41,7 +41,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.5.0",
-    "ng-packagr": "^11.0.0",
+    "ng-packagr": "^14.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
