--- a/projects/acheron/package.json
+++ b/projects/acheron/package.json
@@ -6,6 +6,7 @@
     "@angular/core": "^11.2.14"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "typescript": "^4.8.3"
   }
 }
