--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /node_modules
 /projects/*/node_modules
 
+/.angular/cache
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
