--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular-devkit/architect": "^0.1402.2",
     "@angular-devkit/core": "^14.2.2",
     "@angular-devkit/schematics": "^14.2.2",
+    "@angular-devkit/schematics-cli": "^14.2.4",
     "@angular/animations": "^14.2.1",
     "@angular/cdk": "~14.2.2",
     "@angular/common": "^14.2.1",
@@ -25,6 +26,7 @@
     "@angular/platform-browser": "^14.2.1",
     "@angular/platform-browser-dynamic": "^14.2.1",
     "@angular/router": "^14.2.1",
+    "@ionic/angular": "^6.2.9",
     "@schematics/angular": "^14.2.2",
     "bootstrap": "^5.2.1",
     "rxjs": "~6.6.0",
